  invoked recursively, warnings can be controlled only for the current
  instance of make using the .WARNINGS variable.

* New feature: Printing targets defined by the makefile
  A new option "--print-targets" will print all explicit, non-special targets
  defined in the makefiles, one per line, then exit with success.  No recipes
  are invoked and no makefiles are re-built.

* 'make --print-data-base' (or 'make -p') now outputs time of day
  using the same form as for file timestamps, e.g., "2023-05-10
  10:43:57.570558743".  Previously it used the form "Wed May 10
  10:43:57 2023", which has less detail and is harder to compare.

* Conditional statements starting with the recipe prefix were sometimes
  interpreted in previous versions.  As per the documentation, lines starting
  with the recipe prefix are now never considered conditional statements.

* Tests in the regression test suite now are run in their own directory to
  avoid cross-contamination and allow cleanup if the tests are interrupted.
  More information is printed about failing tests.


Version 4.4.1 (26 Feb 2023)

This release is primarily a bug-fix release.
A complete list of bugs fixed in this version is available here:

https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=110&set=custom

* WARNING: Backward-incompatibility!
  In previous releases it was not well-defined when updates to MAKEFLAGS made
  inside a makefile would be visible.  This release ensures they are visible
  immediately, even when invoking $(shell ...) functions.  Also, command line
  variable assignments are now always present in MAKEFLAGS, even when parsing
  makefiles.
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>

* New feature: Parallel builds of archives
  Previously it was not possible to use parallel builds with archives.  It is
  still not possible using the built-in rules, however you can now override